--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Skyharbor Distinguish",
   "version": "1.0",
-  "description": "Distinguish between dev, staging, and prod tabs",
+  "description": "To quickly distinguish between dev, stg, and prod tabs",
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
